Fixed x axis going out on mobile

--- a/assets/styles/pages/_index.scss
+++ b/assets/styles/pages/_index.scss
@@ -153,6 +153,9 @@
     img{
         width: 80%;
         padding: 50rem;
+        @include media("<=tablet"){
+            padding: 0;
+        }
         
     }
 }
